# minecraft-ai

./: .cursorignore  .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  LICENSE.txt  Makefile  README.md  docker-compose.override.yml.example  docker-compose.yml  initialize.sh  pyproject.toml  test_chat_api_output.txt
.cursor/: mcp.json
.cursor/rules/: documentation-first-guidance.mdc  functional-style-mcp-tool-guidance.mdc  package-management-guidance.mdc  pydantic-model-standards.mdc  readme-integrity-guidance.mdc  solid-modularity-guidance.mdc  srp-guidance.mdc  tdd-guidance.mdc  type-safety-guidance.mdc
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
docs/: API.md  ARCHITECTURE.md  CURSOR_RULES.md  DEVELOPER.md  MAINTENANCE.md  MODELS.md  OBSERVABILITY.md  OVERVIEW.md  PROJECT_JOURNEY.md  TESTING.md
examples/: mcp_client_example.py
minecraft-mod/: build.gradle  gradle.properties
minecraft-mod/run/: options.txt
minecraft-mod/run/config/fabric/: indigo-renderer.properties
minecraft-mod/run/crash-reports/: crash-2025-04-23_02.24.35-client.txt
minecraft-mod/src/client/java/ac/dylanisa/: MinecraftAIClient.java
minecraft-mod/src/client/resources/: minecraft-ai.client.mixins.json
minecraft-mod/src/main/resources/: fabric.mod.json  minecraft-ai.mixins.json
promptfoo/: README.md  config.yaml
promptfoo/prompts/: chat.txt  story.txt
scripts/dev/: install_hooks.py  welcome.sh
scripts/tasks/: move_rules.sh  update_configs.py
src/minecraft_ai/: __init__.py  agents.py  cli.py  mcp_server.py
src/minecraft_ai/api/: __init__.py  endpoints.py  models.py  security.py
src/minecraft_ai/api/routers/: chat.py  minecraft.py
src/minecraft_ai/cli/utils/: cleanup.py
src/minecraft_ai/database/: .gitkeep  database.py  models.py
src/minecraft_ai/utils/: __init__.py  observability.py
src/pydanticai_api_template/: __init__.py  cli.py  mcp_server.py
src/pydanticai_api_template/api/: __init__.py  endpoints.py  models.py
src/pydanticai_api_template/cli/utils/: cleanup.py
src/pydanticai_api_template/utils/: __init__.py  observability.py
tests/: conftest.py  test_chat_api.py  test_mcp_server.py  test_observability.py  test_prompt_test_cli.py
wishlist/: ADW-Plan.md  AI_Application_Template_Roadmap.md  Templateize and CookieCutter.md  conversation-history.md  optimize-for-this.md
(+14 files in other folders)
